# cluster-shift-keying

./: CLAUDE.md  Cargo.toml  PLAN.md  PLAN_512NODE.md  PLAN_NAMING.md  PLAN_PERFORMANCE.md  PLAN_SCALABILITY.md  README.md  RESEARCH.md
examples/: basic_transmission.rs  ber_sweep.rs  multi_bit_512.rs  octagon_demo.rs
src/: lib.rs
src/channel/: error.rs  gaussian.rs  ideal.rs  link.rs  mod.rs  traits.rs
src/codec/: demodulator.rs  error.rs  framing.rs  mod.rs  modulator.rs  multi_bit.rs  symbol_map.rs  traits.rs
src/dynamics/: chen.rs  error.rs  integrator.rs  mod.rs  rossler.rs  traits.rs
src/graph/: coupling.rs  error.rs  heuristic_partition.rs  mod.rs  partition.rs  ring_patterns.rs  symmetry.rs  topology.rs
src/linalg/: block_diag.rs  eigen.rs  error.rs  matrix.rs  mod.rs  sparse.rs
src/metrics/: ber.rs  error.rs  mod.rs  stats.rs  sync_energy.rs
src/pipeline/: config.rs  error.rs  mod.rs  simulation.rs
src/sync/: cluster.rs  error.rs  mod.rs  msf.rs  network.rs  stability.rs
src/utils/: mod.rs  rng.rs
tests/: chen_attractor.rs  cluster_sync.rs  codec_roundtrip.rs  multi_bit_e2e.rs  pipeline_e2e.rs
