[package]
name = "cluster-shift-keying"
version = "0.1.0"
edition = "2021"
description = "Cluster Shift Keying — chaos-based communication via cluster synchronization"
license = "GPL-2.0"

[dependencies]
nalgebra = "0.33"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
