[package]
name = "cluster-shift-keying"
version = "0.1.0"
edition = "2021"
description = "Cluster Shift Keying — chaos-based communication via cluster synchronization"
license = "GPL-2.0"

[dependencies]
nalgebra = "0.33"
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[features]
parallel = ["rayon"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
rand = { version = "0.9", features = ["small_rng"] }
serde_json = "1"
